# pdo

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  macos-build-prompt.md
examples/plugins/: current_time_tool.py
examples/skills/: review.md
src/pdo/: __init__.py  api.py  banner.py  config.py  llm.py  logging_setup.py  main.py  mcp.py  providers.py  rag.py  serve.py  skills.py  theme.py
src/pdo/agent/: __init__.py  core.py  delegate.py  executor.py  memory.py  messages.py  planner.py  reviewer.py  router.py
src/pdo/logs/: .gitkeep
src/pdo/prompts/: system.md
src/pdo/tools/: __init__.py  base.py  code.py  data.py  edit.py  filesystem.py  git.py  memory.py  rag.py  registry.py  search.py  shell.py  web.py
tests/: test_agent.py  test_api.py  test_attachments.py  test_cli.py  test_config.py  test_delegate.py  test_extra_tools.py  test_filesystem.py  test_mcp.py  test_permissions.py  test_plugins.py  test_rag.py  test_registry.py  test_serve.py  test_sessions.py  test_shell.py  test_skills.py  test_summarize.py
